services is remaining one

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,157 @@
-<p>about works!</p>
+<div class="page-wrapper">
+    <section class="inner-banner">
+        <div class="container">
+            <h2 class="inner-banner__title">Our Introduction</h2><!-- /.inner-banner__title -->
+            <ul class="thm-breadcrumb">
+                <li class="thm-breadcrumb__item"><a class="thm-breadcrumb__link" href="index.html">Home</a></li>
+                <li class="thm-breadcrumb__item current"><a class="thm-breadcrumb__link" href="#">Our Introduction</a></li>
+            </ul><!-- /.thm-breadcrumb -->
+        </div><!-- /.container -->
+    </section><!-- /.inner-banner -->
+     <section class="about-two">
+        <div class="container">
+            <div class="about-two__image-block">
+                <div class="about-two__image-one">
+                    <img src="../../assets/images/resources/about-2-1.jpg" alt="Awesome Image" />
+                </div><!-- /.about-two__image-one -->
+            </div><!-- /.about-two__image-block -->
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="about-two__content">
+                        <div class="block-title text-left">
+                            <h2 class="block-title__title">About Us</h2>
+                            <!-- /.block-title__title -->
+                            <p class="block-title__text">Our mission is to develop long-term relationships with our patients and to ensure distinguished service through personalized, honest, ethical and informed care. We aim to help our community achieve excellent oral healthcare through high quality, multidisciplinary and cost efficient dental services and procedures.</p><!-- /.block-title__text -->
+                        </div><!-- /.block-title -->
+                        <ul class="about-two__list">
+                             <li class="about-two__list-item"><i class="dentallox-icon-rounded-check-mark"></i>Over 25 years of community practice</li><!-- /.about-two__list-item -->
+                            <li class="about-two__list-item"><i class="dentallox-icon-rounded-check-mark"></i>Accurately assess your dental condition</li><!-- /.about-two__list-item -->
+                            <li class="about-two__list-item"><i class="dentallox-icon-rounded-check-mark"></i>Educate you about the problem and procedure</li><!-- /.about-two__list-item -->
+                            <li class="about-two__list-item"><i class="dentallox-icon-rounded-check-mark"></i>Provide safety, comfort and security in a warm and welcoming environment</li><!-- /.about-two__list-item -->
+                            <li class="about-two__list-item"><i class="dentallox-icon-rounded-check-mark"></i>Help you afford the treatment you want and deserve</li><!-- /.about-two__list-item -->
+                            <li class="about-two__list-item"><i class="dentallox-icon-rounded-check-mark"></i>Provide supportive hygiene care following treatment to help you maintain optimum results</li><!-- /.about-two__list-item -->
+                            
+                            <!-- /.about-two__list-item -->
+                        </ul><!-- /.about-two__list -->
+                    </div><!-- /.about-two__content -->
+                </div><!-- /.col-lg-8 -->
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </section><!-- /.about-two -->
+    
+   
+   
+     <section class="team-one">
+        <div class="container">
+            <div class="block-title text-left">
+                <h2 class="block-title__title">MEET THE TEAM</h2><!-- /.block-title__title -->
+                <p class="block-title__text">Our team is dedicated to making every patient feel welcome, comfortable, and valued – because in our office you are! One of our favorite things to do is help those patients who suffer from dental fear or anxiety. </p><!-- /.block-title__text -->
+            </div><!-- /.block-title -->
+            <div class="row">
+            
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-one__single">
+                        <div class="team-one__image">
+                            <img src="../../assets/images/team/Robin-Chen.jpg" alt="Robin-Chen" />
+                            <div class="team-one__hover">
+                                <h3 class="team-one__title"><a href="/robin-chen" routerLink ="/robin-chen">Dr Robyn Chen</a></h3><!-- /.team-one__title -->
+                                <p class="team-one__designation">Principal Dentist</p><!-- /.team-one__designation -->
+                                <a href="/robin-chen" routerLink ="/robin-chen" class="team-one__link">Know More</a>
+                            </div><!-- /.team-one__hover -->
+                        </div><!-- /.team-one__image -->
+                        <div class="team-one__content">
+                            <h3 class="team-one__title"><a  href="/robin-chen" routerLink ="/robin-chen">Dr Robyn Chen</a></h3><!-- /.team-one__title -->
+                            <p class="team-one__designation">Principal Dentist</p><!-- /.team-one__designation -->
+                        </div><!-- /.team-one__content -->
+                    </div><!-- /.team-one__single -->
+                </div><!-- /.col-lg-3 -->
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-one__single">
+                        <div class="team-one__image">
+                            <img src="../../assets/images/team/Seena.jpg" alt="Seena Gopi" />
+                            <div class="team-one__hover">
+                                <h3 class="team-one__title"><a href="/seena" routerLink ="/seena">Dr Seena Gopi</a></h3><!-- /.team-one__title -->
+                                <p class="team-one__designation">Owner / Dentist</p><!-- /.team-one__designation -->
+                                <a href="/seena" routerLink ="/seena" class="team-one__link">Know More</a>
+                            </div><!-- /.team-one__hover -->
+                        </div><!-- /.team-one__image -->
+                        <div class="team-one__content">
+                            <h3 class="team-one__title"><a href="/seena" routerLink ="/seena">Dr Seena Gopi</a></h3><!-- /.team-one__title -->
+                            <p class="team-one__designation">Owner / Dentist</p><!-- /.team-one__designation -->
+                        </div><!-- /.team-one__content -->
+                    </div><!-- /.team-one__single -->
+                </div><!-- /.col-lg-3 -->
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-one__single">
+                        <div class="team-one__image">
+                            <img src="../../assets/images/team/luisa-antonio.jpg" alt="Luisa Antonio" />
+                            <div class="team-one__hover">
+                                <h3 class="team-one__title"><a href="" routerLink ="/luisa">Luisa Antonio</a></h3><!-- /.team-one__title -->
+                                <p class="team-one__designation">Hygienist</p><!-- /.team-one__designation -->
+                                <a href="" routerLink ="/luisa" class="team-one__link">Know More</a>
+                            </div><!-- /.team-one__hover -->
+                        </div><!-- /.team-one__image -->
+                        <div class="team-one__content">
+                            <h3 class="team-one__title"><a href="" routerLink ="/luisa">Luisa Antonio</a></h3><!-- /.team-one__title -->
+                            <p class="team-one__designation">Hygienist</p><!-- /.team-one__designation -->
+                        </div><!-- /.team-one__content -->
+                    </div><!-- /.team-one__single -->
+                </div><!-- /.col-lg-3 -->
+                
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-one__single">
+                        <div class="team-one__image">
+                            <img src="../../assets/images/team/deborah-dixon.jpg" alt="deborah-dixon" />
+                            <div class="team-one__hover">
+                                <h3 class="team-one__title"><a href="" routerLink ="/deb">Deb Howarth</a></h3><!-- /.team-one__title -->
+                                <p class="team-one__designation">Practice Manager</p><!-- /.team-one__designation -->
+                                <a href="" routerLink ="/deb" class="team-one__link">Know More</a>
+                            </div><!-- /.team-one__hover -->
+                        </div><!-- /.team-one__image -->
+                        <div class="team-one__content">
+                            <h3 class="team-one__title"><a href="" routerLink ="/deb">Deb Howarth</a></h3><!-- /.team-one__title -->
+                            <p class="team-one__designation">Practice Manager</p><!-- /.team-one__designation -->
+                        </div><!-- /.team-one__content -->
+                    </div><!-- /.team-one__single -->
+                </div><!-- /.col-lg-3 -->
+                
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-one__single">
+                        <div class="team-one__image">
+                            <img src="../../assets/images/team/Lydia-Potreous.jpg" alt="Lydia Potreous" />
+                            <div class="team-one__hover">
+                                <h3 class="team-one__title"><a href="" routerLink ="/lydia">Lydia Potreous</a></h3><!-- /.team-one__title -->
+                                <p class="team-one__designation">Dental Nurse</p><!-- /.team-one__designation -->
+                                <a href="" routerLink ="/lydia" class="team-one__link">Know More</a>
+                            </div><!-- /.team-one__hover -->
+                        </div><!-- /.team-one__image -->
+                        <div class="team-one__content">
+                            <h3 class="team-one__title"><a href="" routerLink ="/lydia">Lydia Potreous</a></h3><!-- /.team-one__title -->
+                            <p class="team-one__designation">Dental Nurse</p><!-- /.team-one__designation -->
+                        </div><!-- /.team-one__content -->
+                    </div><!-- /.team-one__single -->
+                </div><!-- /.col-lg-3 -->
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="team-one__single">
+                        <div class="team-one__image">
+                            <img src="../../assets/images/team/Kayla-Flewellyn.jpg" alt="Kayla Flewellyn" />
+                            <div class="team-one__hover">
+                                <h3 class="team-one__title"><a href="" routerLink ="/kayla">Kayla Flewellyn</a></h3><!-- /.team-one__title -->
+                                <p class="team-one__designation">Dental Nurse</p><!-- /.team-one__designation -->
+                                <a href="" routerLink ="/kayla" class="team-one__link">Know More</a>
+                            </div><!-- /.team-one__hover -->
+                        </div><!-- /.team-one__image -->
+                        <div class="team-one__content">
+                            <h3 class="team-one__title"><a href="" routerLink ="/kayla">Kayla Flewellyn</a></h3><!-- /.team-one__title -->
+                            <p class="team-one__designation">Dental Nurse</p><!-- /.team-one__designation -->
+                        </div><!-- /.team-one__content -->
+                    </div><!-- /.team-one__single -->
+                </div><!-- /.col-lg-3 -->
+                
+                
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </section><!-- /.team-one -->
+
+</div><!-- /.page-wrapper -->
+<a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
