--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,1 +1,29 @@
-<p>gallery works!</p>
+<div class="page-wrapper">
+    <section class="inner-banner">
+        <div class="container">
+            <h2 class="inner-banner__title">Our Gallery</h2><!-- /.inner-banner__title -->
+            <ul class="thm-breadcrumb">
+                <li class="thm-breadcrumb__item"><a class="thm-breadcrumb__link" href="index.html">Home</a></li>
+                <li class="thm-breadcrumb__item current"><a class="thm-breadcrumb__link" href="#">Our Gallery</a></li>
+            </ul><!-- /.thm-breadcrumb -->
+        </div><!-- /.container -->
+    </section><!-- /.inner-banner -->
+    <section class="gallery-one gallery-one__page">
+        <div class="container">
+            <div class="row">
+               
+               
+               
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </section><!-- /.gallery-one -->
+    <section class="cta-two">
+        <div class="container">
+            <h2 class="cta-two__title">Have Dental Problem : Call us at <a href="tel:09-432-8139" class="cta-two__highlight">09-432-8139</a> or make an <a href="book-an-appointment.html"
+                    class="cta-two__highlight cta-two__link">Appointment</a></h2><!-- /.cta-two__title -->
+        </div><!-- /.container -->
+    </section><!-- /.cta-two -->
+    
+
+</div><!-- /.page-wrapper -->
+<a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
