--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,54 +1,5 @@
-<body>
-   
-    <div class="page-wrapper">
-       <section class="topbar-one">
-            <div class="container">
-                <div class="topbar-one__left-text">Schedule: Monday to Friday 09:00 - 17:00</div><!-- /.left-text -->
-                <div class="topbar-one__right-content">
-                    
-                    <a href="book-an-appointment.html" class="topbar-one__btn">Book an Appointment</a>
-                </div><!-- /.right-content -->
-            </div><!-- /.container -->
-        </section><!-- /.topbar-one -->
-        <header class="site-header header-one">
-            <nav class="navbar navbar-expand-lg navbar-light header-navigation stricky">
-                <div class="container clearfix">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="logo-box clearfix">
-                        <a class="navbar-brand" href="index.html">
-                            <img src="../../assets/images/resources/logo.png" class="main-logo" alt="Awesome Image" />
-                            <img src="../../assets/images/resources/logo.png" class="stick-logo" alt="Awesome Image" />
-                        </a>
-                        <button class="menu-toggler" data-target=".main-navigation">
-                            <span class="fa fa-bars"></span>
-                        </button>
-                    </div><!-- /.logo-box -->
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                     <div class="main-navigation">
-                        <ul class=" navigation-box">
-						
-                            <li class="current"><a href="index.html">Home</a></li>
-                            <li class="submenu"><a href="about.html">About Us</a></li>
-							<li><a href="service.html">Services</a></li>
-                            <li><a href="gallery.html">Gallery</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </div><!-- /.navbar-collapse -->
-                    <div class="right-side-box">
-                        <a href="tel:09-432-8139" class="header-one__cta">
-                            <span class="header-one__cta-icon">
-                                <i class="dentallox-icon-call-answer"></i>
-                            </span>
-                            <span class="header-one__cta-content">
-                                <span class="header-one__cta-text">Call Us for query:</span>
-                                <span class="header-one__cta-number">09-432-8139</span>
-                            </span>
-                        </a>
-                    </div><!-- /.right-side-box -->
-                </div>
-                <!-- /.container -->
-            </nav>
-        </header><!-- /.header-one -->
+<div class="page-wrapper">
+
 		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -71,7 +22,7 @@
 
         <section class="cta-two">
             <div class="container">
-                <h2 class="cta-two__title"  id="dental">Have Dental Problem : Call us at <a href="tel:094328139" class="cta-two__highlight">09-432-8139</a> or make an <a href="book-an-appointment.html" class="cta-two__highlight cta-two__link">Appointment</a></h2><!-- /.cta-two__title -->
+                <h2 class="cta-two__title"  id="dental">Have Dental Problem : Call us at <a href="tel:094328139" class="cta-two__highlight">09-432-8139</a> or make an <a href="/book" routerLink ="/book" class="cta-two__highlight cta-two__link">Appointment</a></h2><!-- /.cta-two__title -->
             </div><!-- /.container -->
         </section><!-- /.cta-two -->
 		
@@ -95,7 +46,7 @@
                     <div class="item">
                        <div class="service-two__single">
                             <div class="service-two__image">
-                                <img src="../../assets/images/services/dentures.jpg" alt="Awesome Image" />
+                                <img src="../../assets/images/services/Crowns-Bridges.jpg" alt="Awesome Image" />
                                
                             </div><!-- /.service-two__image -->
                             <div class="service-two__content">
@@ -108,7 +59,7 @@
                     <div class="item">
                          <div class="service-two__single">
                             <div class="service-two__image">
-                                <img src="images/services/root-1.jpg" alt="Awesome Image" />
+                                <img src="../../assets/images/services/root-1.jpg" alt="Awesome Image" />
                                
                             </div><!-- /.service-two__image -->
                             <div class="service-two__content">
@@ -121,7 +72,7 @@
                     <div class="item">
                         <div class="service-two__single">
                             <div class="service-two__image">
-                                <img src="images/services/Extraction.jpg" alt="Awesome Image" />
+                                <img src="../../assets/images/services/Extraction.jpg" alt="Awesome Image" />
                                
                             </div><!-- /.service-two__image -->
                             <div class="service-two__content">
@@ -135,7 +86,7 @@
                     <div class="item">
                         <div class="service-two__single">
                             <div class="service-two__image">
-                                <img src="images/services/Veneer-1.jpg" alt="Awesome Image" />
+                                <img src="../../assets/images/services/Veneer-1.jpg" alt="Awesome Image" />
                                
                             </div><!-- /.service-two__image -->
                             <div class="service-two__content">
@@ -148,7 +99,7 @@
                     <div class="item">
                          <div class="service-two__single">
                             <div class="service-two__image">
-                                <img src="images/services/zoom-1.jpg" alt="Awesome Image" />
+                                <img src="../../assets/images/services/zoom-1.jpg" alt="Awesome Image" />
                                 
                             </div><!-- /.service-two__image -->
                             <div class="service-two__content">
@@ -161,7 +112,7 @@
                     <div class="item">
                         <div class="service-two__single">
                             <div class="service-two__image">
-                                <img src="images/services/Hygienist-1.jpg" alt="Awesome Image" />
+                                <img src="../../assets/images/services/Hygienist-1.jpg" alt="Awesome Image" />
                                 
                             </div><!-- /.service-two__image -->
                             <div class="service-two__content">
@@ -174,7 +125,7 @@
                     <div class="item">
                          <div class="service-two__single">
                             <div class="service-two__image">
-                                <img src="images/services/service-1-7.jpg" alt="Awesome Image" />
+                                <img src="../../assets/images/services/service-1-7.jpg" alt="Awesome Image" />
                                 
                             </div><!-- /.service-two__image -->
                             <div class="service-two__content">
@@ -187,7 +138,7 @@
 					<div class="item">
                         <div class="service-two__single">
                             <div class="service-two__image">
-                                <img src="images/services/composite.jpg" alt="Awesome Image" />
+                                <img src="../../assets/images/services/composite.jpg" alt="Awesome Image" />
                                
                             </div><!-- /.service-two__image -->
                             <div class="service-two__content">
@@ -200,7 +151,7 @@
 					<div class="item">
                         <div class="service-two__single">
                             <div class="service-two__image">
-                                <img src="images/services/Crowns-Bridges.jpg" alt="Awesome Image" />
+                                <img src="../../assets/images/services/Crowns-Bridges.jpg" alt="Awesome Image" />
                                
                             </div><!-- /.service-two__image -->
                             <div class="service-two__content">
@@ -230,10 +181,10 @@
             <div class="container">
                 <div class="about-one__image-block">
                     <div class="about-one__image-one">
-                        <img src="images/resources/about-1-1.jpg" alt="Awesome Image" />
+                        <img src="../../assets/images/resources/about-1-1.jpg" alt="Awesome Image" />
                     </div><!-- /.about-one__image-one -->
                     <div class="about-one__image-two">
-                        <img src="images/resources/about-1-2.jpg" alt="Awesome Image" />
+                        <img src="../../assets/images/resources/about-1-2.jpg" alt="Awesome Image" />
                     </div><!-- /.about-one__image-two -->
                 </div><!-- /.about-one__image-block -->
                 <div class="row no-gutters">
@@ -390,60 +341,7 @@
         </section><!-- /.appointment-one -->
         
 		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9144.559136017582!2d174.45123327904977!3d-35.87131399687437!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6cf8f1631d271991!2sGentle%20Dental%20Ruakaka!5e0!3m2!1sen!2sin!4v1600745474185!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        <footer class="site-footer">
-            <div class="container ">
-                <div class="footer-col">
-                    <div class="footer-widget footer-widget__about">
-                        <a class="footer-widget__logo" href="index.html"><img src="images/resources/logo-footer.png" alt="Awesome Image" /></a>
-                        <p class="footer-widget__text">At Gentle Dental Ruakaka, we take pride in performing dentistry to the highest standards as we put a strong focus on safety and quality. </p>
-                    </div><!-- /.footer-widget -->
-                    <div class="footer-widget">
-                        <h3 class="footer-widget__title">
-                            Useful Links
-                        </h3>
-                        <ul class="footer-widget__links-list">
-                            <li class="footer-widget__links-list-item"> <a href="index.html">Home</a> </li><!-- /.footer-widget__links-list-item -->
-                            <li class="footer-widget__links-list-item"> <a href="Service.html">Services</a> </li><!-- /.footer-widget__links-list-item -->
-                            <li class="footer-widget__links-list-item"> <a href="privacy-policy">Privacy Policy</a> </li><!-- /.footer-widget__links-list-item -->
-							<li class="footer-widget__links-list-item"> <a href="teams-and-conditions">Teams and Conditions</a> </li><!-- /.footer-widget__links-list-item -->
-                        </ul><!-- /.footer-widget__links-list -->
-                    </div><!-- /.footer-widget -->
-                    
-                    <div class="footer-widget">
-                        <h3 class="footer-widget__title">
-                            Get In Touch
-                        </h3>
-                        <ul class="footer-widget__time-list no-margin">
-                            <li class="footer-widget__time-list-item">19/378 Marsden Point Road,</li><!-- /.footer-widget__time-list-item -->
-                            <li class="footer-widget__time-list-item">Ruakaka 0171</li><!-- /.footer-widget__time-list-item -->
-                            <li class="footer-widget__time-list-item">Phone : <a href="tel:094328139">09-432-8139</a></li><!-- /.footer-widget__time-list-item -->
-                            <li class="footer-widget__time-list-item">Email : <a href="mailto:dentistruakaka@outlook.com">dentistruakaka@outlook.com</a></li><!-- /.footer-widget__time-list-item -->
-                        </ul><!-- /.footer-widget__time-list -->
-                        <div class="footer-widget__social">
-                            <a href="#"><i class="fa fa-facebook-f"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            
-                        </div><!-- /.footer-widget__social -->
-                    </div><!-- /.footer-widget -->
-                </div><!-- /.footer-col -->
-            </div><!-- /.container -->
-            <div class="bottom-footer">
-                <div class="container">
-                    <hr class="bottom-footer__line">
-                    <div class="bottom-footer__wrap">
-                        <p class="bottom-footer__text">&copy; Copyright Gentle Dental Ruakaka 2020 . All right reserved.</p><!-- /.bottom-footer__text -->
-                        <p class="bottom-footer__text">Design & Developed by <a href="https://www.creativenuts.in/">Creative Nuts</a></p><!-- /.bottom-footer__text -->
-                    </div><!-- /.bottom-footer__wrap -->
-                </div><!-- /.container -->
-            </div><!-- /.bottom-footer -->
-        </footer><!-- /.site-footer -->
+
     </div><!-- /.page-wrapper -->
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
     <!-- /.scroll-to-top -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/bootstrap-select.min.js"></script>
-    <script src="js/bootstrap-datepicker.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/theme.js"></script>
-</body>
